add node version to the package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vite-template",
   "version": "0.1.0",
   "license": "MIT",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "prepare": "husky install",
     "start": "vite --host",
