--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "new": "plop --plopfile generators/index.js",
     "lint": "eslint --cache",
     "storybook": "start-storybook ./ -p 6006",
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "yarn chromatic --project-token=6efdf242c8cb",
     "test:update": "jest --updateSnapshot ./src",
     "test:watch": "jest ./src",
     "test:coverage": "jest --coverage --watchAll=false ./src",
@@ -93,6 +95,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "autoprefixer": "^10.4.2",
+    "chromatic": "^6.5.3",
     "css-loader": "5.2.6",
     "dotenv": "^14.2.0",
     "eslint": "^8.6.0",
