--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rc-dialog": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^8.1.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "6",
