--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "vite-template",
+  "name": "chimer-kingdome",
   "version": "0.1.0",
-  "license": "MIT",
-  "engines": {
-    "node": "16.x"
-  },
+  "private": true,
   "scripts": {
-    "prepare": "husky install",
-    "start": "vite --host",
-    "build": "tsc && vite build",
-    "preview": "yarn build && vite preview",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "storybook": "start-storybook ./public -p 6006",
+    "eject": "react-scripts eject",
     "new": "plop --plopfile generators/index.js",
     "lint": "eslint --cache",
-    "storybook": "start-storybook ./ -p 6006",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "yarn chromatic --project-token=6efdf242c8cb",
     "test:update": "jest --updateSnapshot ./src",
     "test:watch": "jest ./src",
     "test:coverage": "jest --coverage --watchAll=false ./src",
-    "pre-commit": "lint-staged"
+    "generate-types": "node ./scripts/generate-types.js",
+    "download-schema": "node ./scripts/download-schema.js"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "husky": {
     "hooks": {
@@ -31,107 +30,6 @@
       "bash -c tsc"
     ]
   },
-  "dependencies": {
-    "@amfi/connect-wallet": "1.1.24",
-    "@reduxjs/toolkit": "^1.6.2",
-    "axios": "^0.24.0",
-    "bignumber.js": "^9.0.2",
-    "clsx": "^1.1.1",
-    "jest": "^27.5.1",
-    "node-sass": "^7.0.1",
-    "rc-dialog": "^8.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-outside-click-handler": "^1.3.0",
-    "react-paginate": "^8.1.2",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "6",
-    "react-select": "^5.2.2",
-    "react-table": "7.6.2",
-    "react-toastify": "^8.1.0",
-    "react-tooltip": "^4.2.21",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "use-debounce": "^7.0.1",
-    "uuid": "^8.3.2",
-    "web3": "^1.2.11",
-    "web3-utils": "^1.7.0"
-  },
-  "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
-    "@mdx-js/preact": "^2.1.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-inject": "^4.0.4",
-    "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-a11y": "^6.4.19",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addon-storyshots": "^6.3.8",
-    "@storybook/addon-storyshots-puppeteer": "^6.3.8",
-    "@storybook/addons": "^6.3.8",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.3.8",
-    "@svgr/rollup": "^6.2.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.180",
-    "@types/node": "^17.0.8",
-    "@types/node-sass": "^4.11.2",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/react-select": "^5.0.1",
-    "@types/react-table": "^7.7.10",
-    "@types/redux-persist": "^4.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-legacy": "^1.6.4",
-    "@vitejs/plugin-react": "^1.0.7",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "autoprefixer": "^10.4.2",
-    "chromatic": "^6.5.3",
-    "css-loader": "5.2.6",
-    "dotenv": "^14.2.0",
-    "eslint": "^8.6.0",
-    "eslint-config-airbnb-typescript": "9.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-storybook": "^0.5.7",
-    "husky": "^7.0.4",
-    "lint-staged": "11.1.4",
-    "npm-run-all": "^4.1.5",
-    "plop": "2.7.4",
-    "postcss": "^8.4.5",
-    "postcss-scss": "^4.0.3",
-    "prettier": "^2.5.1",
-    "process": "^0.11.10",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "sass": "^1.48.0",
-    "sass-loader": "10.1.1",
-    "storybook-builder-vite": "^0.1.21",
-    "style-loader": "2.0.0",
-    "stylelint": "^14.2.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vite-plugin-eslint": "^1.3.0",
-    "vite-tsconfig-paths": "^3.3.17"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -143,5 +41,94 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@amfi/connect-wallet": "1.1.24",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.26.0",
+    "bignumber.js": "^9.0.1",
+    "clsx": "^1.1.1",
+    "dayjs": "^1.10.7",
+    "ethereum-types": "^3.2.0",
+    "formik": "^2.2.9",
+    "history": "^4.10.0",
+    "node-sass": "^6.0.0",
+    "rc-dialog": "^8.7.0",
+    "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.4",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "6",
+    "react-scripts": "^4.0.3",
+    "react-toastify": "^8.1.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "swiper": "^8.0.3",
+    "typeface-montserrat": "1.1.13",
+    "use-debounce": "^7.0.1",
+    "uuid": "^8.3.2",
+    "web3": "^1.2.11",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@codegena/ng-api-service": "^2.2.0-alpha.0",
+    "@codegena/oapi3ts": "^3.0.0-alpha.3",
+    "@codegena/oapi3ts-cli": "^2.1.10-alpha.8",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/addon-storyshots": "^6.3.8",
+    "@storybook/addon-storyshots-puppeteer": "^6.3.8",
+    "@storybook/addons": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.173",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.11",
+    "@types/redux-persist": "^4.3.1",
+    "autorest": "^3.5.1",
+    "css-loader": "5.2.6",
+    "eslint-config-airbnb-typescript": "9.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "fs": "^0.0.1-security",
+    "husky": "^7.0.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-css-modules": "^2.1.0",
+    "lint-staged": ">=10",
+    "openapi-typescript": "^5.2.0",
+    "opener": "^1.5.2",
+    "plop": "2.7.4",
+    "postcss": "^8.4.5",
+    "postcss-scss": "^4.0.3",
+    "prettier": "2.4.1",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-scripts": "^4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "sass": "^1.48.0",
+    "sass-loader": "10.1.1",
+    "typescript": "^4.4.3"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
