--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,26 @@
-node_modules
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/storybook-static
+
+# misc
 .DS_Store
-dist
-dist-ssr
-*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .idea
 .eslintcache
-yarn-error.log
-build-storybook.log
+settings.json
+.history
