--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "storybook": "start-storybook ./public -p 6006",
     "eject": "react-scripts eject",
     "new": "plop --plopfile generators/index.js",
     "lint": "eslint --cache",
@@ -14,10 +13,22 @@
     "test:watch": "jest ./src",
     "test:coverage": "jest --coverage --watchAll=false ./src",
     "generate-types": "node ./scripts/generate-types.js",
-    "download-schema": "node ./scripts/download-schema.js"
+    "download-schema": "node ./scripts/download-schema.js",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "husky": {
     "hooks": {
@@ -63,10 +74,13 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-outside-click-handler": "^1.3.0",
+    "react-paginate": "^8.1.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "6",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^4.2.21",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "swiper": "^8.0.3",
@@ -84,14 +98,14 @@
     "@codegena/ng-api-service": "^2.2.0-alpha.0",
     "@codegena/oapi3ts": "^3.0.0-alpha.3",
     "@codegena/oapi3ts-cli": "^2.1.10-alpha.8",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/addon-storyshots": "^6.3.8",
-    "@storybook/addon-storyshots-puppeteer": "^6.3.8",
-    "@storybook/addons": "^6.3.8",
+    "@storybook/addon-actions": "^6.4.21",
+    "@storybook/addon-essentials": "^6.4.21",
+    "@storybook/addon-interactions": "^6.4.21",
+    "@storybook/addon-links": "^6.4.21",
+    "@storybook/node-logger": "^6.4.21",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.8",
+    "@storybook/react": "^6.4.21",
+    "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/react-hooks": "^7.0.2",
