--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "jest --coverage --watchAll=false ./src",
     "generate-types": "node ./scripts/generate-types.js",
     "download-schema": "node ./scripts/download-schema.js",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "start-storybook ./public -p 6006",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
@@ -101,7 +101,9 @@
     "@storybook/addon-actions": "^6.4.21",
     "@storybook/addon-essentials": "^6.4.21",
     "@storybook/addon-interactions": "^6.4.21",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.4.21",
+    "@storybook/core-client": "^6.4.21",
     "@storybook/node-logger": "^6.4.21",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.21",
