--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@reduxjs/toolkit": "^1.6.2",
+    "@storybook/addon-knobs": "^6.4.0",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.1",
     "clsx": "^1.1.1",
