--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "scripts/generate-types.js"  ],
   "exclude": [
     "node_modules"
   ],
