--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^8.1.2",
     "react-redux": "^7.2.1",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
