--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-loading-skeleton": "^3.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-paginate": "^8.1.2",
     "react-redux": "^7.2.1",
