--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     ]
   },
   "dependencies": {
-    "@amfi/connect-wallet": "^1.1.24",
+    "@amfi/connect-wallet": "https://github.com/Rock-n-Block/connect-wallet-lib.git#master",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
